# ballotguide

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/ballotguide/: __init__.py  cli.py  models.py  report.py
src/ballotguide/analyzer/: bias.py  impact.py  positions.py
src/ballotguide/guide/: candidates.py  comparator.py  measures.py
tests/: test_benchmark.py  test_bias.py  test_candidates.py  test_comparator.py  test_core.py  test_impact.py  test_integration.py  test_measures.py  test_models.py  test_positions.py  test_report.py
