[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ballotguide"
version = "0.1.0"
description = "AI Voter Guide - strictly non-partisan ballot information tool"
authors = [{ name = "Mukunda Katta" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
ballotguide = "ballotguide.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
